# GLaDOS

./: .gitattributes  .gitignore  CHANGELOG_EN_BRANCH.md  EN_BRANCH_QUICK_START.md  INSTALL_CUDA.md  QUICK_START_RU.md  README.md  RUSSIAN_TTS_SETUP.md  download_vad_only.py  pyproject.toml
configs/: assistant_config.yaml  glados_bilingual_config.yaml  glados_config.yaml  glados_ru_config.yaml
docs/: EN_BRANCH_ARCHITECTURE.md  GLADOS_RU_AUDIO_PROCESSING.md  LLM_WARMUP.md  RVC_SETUP.md
examples/: glados_ru_example.py
presets/: glados_default.json
scripts/: check_cuda.py  fix_silero_loading.py  install_cuda.ps1  install_cuda.sh  run_glados_ru.ps1  run_glados_ru.sh  test_llm_warmup.py
src/glados/: __init__.py  cli.py  tui.py
src/glados/ASR/: __init__.py  ctc_asr.py  gigaam_asr.py  tdt_asr.py  whisper_asr.py
src/glados/TTS/: __init__.py  phonemizer.py  tts_glados.py  tts_glados_ru.py  tts_kokoro.py  tts_silero_en.py  tts_silero_ru.py
src/glados/audio_io/: __init__.py  diarization.py  language_id.py  null_io.py  sounddevice_io.py  vad.py
src/glados/audio_processing/: __init__.py  audio_processor.py  audio_tui.py  preset_manager.py  rvc_inference.py  rvc_processor.py
src/glados/audio_processing/rvc/: __init__.py  config.py  hubert.py  pipeline.py
src/glados/audio_processing/rvc/infer_pack/: __init__.py
src/glados/core/: audio_data.py  audio_mixer.py  branch_processor.py  chat_logger.py  engine.py  language_router.py  llm_processor.py  speech_listener.py  speech_player.py  tts_synthesizer.py
src/glados/glados_ui/: glados.tcss
src/glados/telemetry/: __init__.py  gpu.py
src/glados/utils/: dataclass_patches.py  gigaam_patches.py  onnx.py  spoken_text_converter.py
tests/: GigaAM_import.py  quick_test_bilingual.py  test_config_parsing.py  test_en_branch_integration.py  test_en_branch_modules.py  test_silero_lid_loading.py  test_silero_v5_loading.py
